--- a/netflix-clone/src/Components/Rows/Row/Row.css
+++ b/netflix-clone/src/Components/Rows/Row/Row.css
@@ -6,14 +6,19 @@
 	margin-right: 10px;
 }
 .row__posters {
-	display: flex;
-	overflow-y: hidden;
-	overflow-x: scroll;
-	padding: 5px;
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
 }
+
+
 .row__posters::-webkit-scrollbar {
-	display: none;
+    display: none;
 }
+/* .row__posters::-webkit-scrollbar-thumb:hover {
+   display: none;
+} */
 .row__poster:hover {
 	transform: scale(1.08);
 }
